--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,7 +71,7 @@ main{
 }
 .about{
     text-align: center;
-    margin-top: 130px;
+    
     background: #FFF8F3;
     border-radius: 10px;
     padding: 130px 150px;
@@ -103,5 +103,34 @@ color: #757575;
     font-weight: 700;
     font-size: 20px;
     color: #474747;
+
+}
+.section{
+    margin-top: 130px;
+}
+.section-title{
+    text-align: center;
+    font-weight: 700;
+    font-size: 35px;
+    margin-bottom: 50px;
+}
+.skills{
+    background-color: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0,0,0,0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skills-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skill-description{
+    color:#757575;
 
 }
