--- a/styles/styles.css
+++ b/styles/styles.css
@@ -134,3 +134,52 @@ color: #757575;
     color:#757575;
 
 }
+.resume-contant{
+    display: flex;
+    gap: 24px;
+
+}
+.resume .title{
+font-weight: 700;
+font-size: 25px;
+color: #474747;
+margin-bottom: 10px;
+}
+.resume .sub-title{
+    color:#757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.resume .description{
+    color:#757575;
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
+}
+.contact{
+    display: flex;
+    gap: 100px;
+    background-color: #FFF8F3;
+    padding: 130px 200px;
+
+}
+.contact .section-title{
+    text-align: left;
+
+}
+.contact input[type="text"],input[type="email"],textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+
+}
+.contact a{
+    text-decoration: none;
+}
