--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@
 nav{
     display: flex;
     justify-content: space-between;
-    margin: 50px 200px;
+    padding: 50px 200px;
 }
 nav ul{
     display: flex;
